--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Lift</title>
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+	<div class="contenedor">
+		<header class="menu">
+			<div class="izq"></div>
+			<div class="der"></div>
+		</header>
+	</div>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
