--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Lift</title>
+	<title>Lyft</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -10,7 +10,13 @@
 	<div class="contenedor">
 		<header class="menu">
 			<div class="izq"></div>
-			<div class="der"></div>
+			<div class="der">
+			<ul>
+			<li><a href="#">Drive</a></li>
+			<li><a href="#">Explore</a></li>
+			<li><a href="#">Help</a></li>
+			</ul>
+			</div>
 		</header>
 	</div>
 	<script src="assets/js/main.js"></script>
