Listo hover del menu y cuadro para formulario

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 			</ul>
 			</div>
 		</header>
+		<div class="cuadro">
+		<div class="contenido">
+		<h2 class="celeste">Turn Miles Into Money</h2>
+		<p class="signtext">Sign up to drive lyft</p>
+		</div>
+		</div>
 	</div>
 	<script src="assets/js/main.js"></script>
 </body>
