--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Lyft</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<script src="https://use.fontawesome.com/8f8db047c3.js"></script>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -22,6 +23,11 @@
 		<div class="contenido">
 		<h2 class="celeste">Turn Miles Into Money</h2>
 		<p class="signtext">Sign up to drive lyft</p>
+		<input type="tel" placeholder="Phone Number" id="input">
+		<button class="boton">Become a Driver <i class="fa fa-heart" aria-hidden="true"></i></button>
+		<p class="textoabajo">Already applied? Check the status of your application here.
+		<p class="textoabajo">Earn money for inviting friend to drive. Learn more.
+		</p>
 		</div>
 		</div>
 	</div>
