Cuadro del play avanzado y fondo fijo

--- a/index.html
+++ b/index.html
@@ -20,15 +20,23 @@
 			</div>
 		</header>
 		<div class="cuadro">
-		<div class="contenido">
-		<h2 class="celeste">Turn Miles Into Money</h2>
-		<p class="signtext">Sign up to drive lyft</p>
-		<input type="tel" placeholder="Phone Number" id="input">
-		<button class="boton">Become a Driver <i class="fa fa-heart" aria-hidden="true"></i></button>
-		<p class="textoabajo">Already applied? Check the status of your application here.
-		<p class="textoabajo">Earn money for inviting friend to drive. Learn more.
-		</p>
+			<div class="contenido">
+			<h2 class="celeste">Turn Miles Into Money</h2>
+			<p class="signtext">Sign up to drive lyft</p>
+			<input type="tel" placeholder="Phone Number" id="input">
+			<button class="boton">Become a Driver <i class="fa fa-heart" aria-hidden="true"></i></button>
+			<p class="textoabajo">Already applied? Check the status of your application here.
+			<p class="textoabajo">Earn money for inviting friend to drive. Learn more.
+			</p>
+			</div>
 		</div>
+		<div class="juego">
+			<div class="textojuego">
+			Play with lyft
+			</div>
+			<div class="autos">
+			.
+			</div>
 		</div>
 	</div>
 	<script src="assets/js/main.js"></script>
