Arreglado el menu en fijo y el absolute debajo del nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="contenedor">
-		<header class="menu">
+		<nav class="menu">
 			<div class="izq"></div>
 			<div class="der">
 			<ul>
@@ -18,8 +18,8 @@
 			<li><a href="#">Help</a></li>
 			</ul>
 			</div>
-		</header>
-		<div class="cuadro">
+		</nav>
+		<header class="cuadro">
 			<div class="contenido">
 			<h2 class="celeste">Turn Miles Into Money</h2>
 			<p class="signtext">Sign up to drive lyft</p>
@@ -29,7 +29,7 @@
 			<p class="textoabajo">Earn money for inviting friend to drive. Learn more.
 			</p>
 			</div>
-		</div>
+		</header>
 		<div class="juego">
 			<div class="textojuego">
 			Play with lyft
