Cuadro coordenadas y boton listo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 			Play with lyft
 			</div>
 			<div class="autos">
-			.
+			<i class="fa fa-car" aria-hidden="true"></i>
+			<input type="number" placeholder="X coordinate" id="xcorde">
+			<i class="fa fa-car" aria-hidden="true"></i>
+			<input type="number" placeholder="Y coordinate" id="ycorde">
+			<button class="start">Start</button>
 			</div>
 		</div>
 	</div>
