--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			</ul>
 			</div>
 		</nav>
+		<div class="espacio">
 		<header class="cuadro">
 			<div class="contenido">
 			<h2 class="celeste">Turn Miles Into Money</h2>
@@ -30,18 +31,36 @@
 			</p>
 			</div>
 		</header>
+		</div>
 		<div class="juego">
 			<div class="textojuego">
 			Play with lyft
 			</div>
 			<div class="autos">
 			<i class="fa fa-car" aria-hidden="true"></i>
-			<input type="number" placeholder="X coordinate" id="xcorde">
+			<input type="text" placeholder="X coordinate" id="xcorde">
 			<i class="fa fa-car" aria-hidden="true"></i>
-			<input type="number" placeholder="Y coordinate" id="ycorde">
+			<input type="text" placeholder="Y coordinate" id="ycorde">
 			<button class="start">Start</button>
 			</div>
 		</div>
+		<footer class="fondo">
+		<div>
+		<div class="textoizq">
+			<h3>Sprint 3 - Proyecto Lyft</h3>
+			<p class="squad">Squad 666</p>
+		</div>
+		<div class="textoder">Links otros proyectos:
+			<p><a href="http://sagicary.github.io/tea-lady/" class="lista">Tea Lady</a>
+			<p><a href="http://sagicary.github.io/coder-girl-floating/" class="lista">Coder Girl</a>
+			</p>
+		</div>
+		</div>
+		<div class="linea">
+			<div class="abajoizq">© 2017 Lyft & Laboratoria. Inc</div>
+			<div class="abajoder">More links</div>
+		</div>
+		</footer>
 	</div>
 	<script src="assets/js/main.js"></script>
 </body>
