--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2 class="celeste">Turn Miles Into Money</h2>
 			<p class="signtext">Sign up to drive lyft</p>
 			<input type="tel" placeholder="Phone Number" id="input">
-			<button class="boton">Become a Driver <i class="fa fa-heart" aria-hidden="true"></i></button>
+			<button class="boton" id="botoninput">Become a Driver <i class="fa fa-heart" aria-hidden="true"></i></button>
 			<p class="textoabajo">Already applied? Check the status of your application here.
 			<p class="textoabajo">Earn money for inviting friend to drive. Learn more.
 			</p>
@@ -57,8 +57,14 @@
 		</div>
 		</div>
 		<div class="linea">
-			<div class="abajoizq">© 2017 Lyft & Laboratoria. Inc</div>
-			<div class="abajoder">More links</div>
+			<div class="abajoi">© 2017 Lyft & Laboratoria. Inc</div>
+			<div class="abajod">
+			<a href="https://www.facebook.com/laboratoriachile/" class="icono">
+			<i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="https://twitter.com/Laboratoriacl/" class="icono">
+			<i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="https://www.instagram.com/laboratoriacl/" class="icono"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+		</div>
 		</div>
 		</footer>
 	</div>
