Js de telefono e ingreso de coordenadas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<input type="text" placeholder="X coordinate" id="xcorde">
 			<i class="fa fa-car" aria-hidden="true"></i>
 			<input type="text" placeholder="Y coordinate" id="ycorde">
-			<button class="start">Start</button>
+			<button class="start" id="jugar">Start</button>
 			</div>
 		</div>
 		<footer class="fondo">
