Modificando JS coordenadas y probando tablero (comentado)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		</header>
 		</div>
 		<div class="juego">
+		<!-- <section id="tablero"> -->
 			<div class="textojuego">
 			Play with lyft
 			</div>
@@ -43,6 +44,7 @@
 			<input type="text" placeholder="Y coordinate" id="ycorde">
 			<button class="start" id="jugar">Start</button>
 			</div>
+		<!-- </section> -->
 		</div>
 		<footer class="fondo">
 		<div>
