--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		</header>
 		</div>
 		<div class="juego">
-		<!-- <section id="tablero"> -->
+		<section id="tablero">
+		<div id="ocultar">
 			<div class="textojuego">
 			Play with lyft
 			</div>
@@ -44,7 +45,8 @@
 			<input type="text" placeholder="Y coordinate" id="ycorde">
 			<button class="start" id="jugar">Start</button>
 			</div>
-		<!-- </section> -->
+		</div>
+		</section>
 		</div>
 		<footer class="fondo">
 		<div>
