--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 			<button class="start" id="jugar">Start</button>
 			</div>
 		</div>
+		</div>
+		<div id="play"><center>
+			<p>Esto no funciona?</p>
+			<p>Prueba con esto :) </p>
+			<iframe src="http://wayou.github.io/t-rex-runner/" width="600" height="180" align="center"></iframe> 
+			</center></div>
 		</section>
 		</div>
 		<footer class="fondo">
