--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="play"><center>
 			<p>Esto no funciona?</p>
 			<p>Prueba con esto :) </p>
-			<iframe src="http://wayou.github.io/t-rex-runner/" width="600" height="180" align="center"></iframe> 
+			<iframe src="chrome://dino/" width="600" height="180" align="center"></iframe> 
 			</center></div>
 		</section>
 		</div>
